--- a/templates/page.html
+++ b/templates/page.html
@@ -33,20 +33,20 @@ Table of contents
 
 {% block footer %}
 <p class="taxonomies">
-    {% if page.taxonomies.tags %}
-    {% for tag in page.taxonomies.tags -%}
+    {%- if page.taxonomies.tags -%}
+    {%- for tag in page.taxonomies.tags -%}
     <a href="/tags/{{ tag | slugify }}">#{{ tag }}</a>
-    {%- endfor %}
-    {% if page.taxonomies.categories %}
-    {% for category in page.taxonomies.categories -%}
+    {%- endfor -%}
+    {%- if page.taxonomies.categories -%}
+    {%- for category in page.taxonomies.categories -%}
     <a href="/categories/{{ category | slugify }}">+{{ category }}</a>
-    {%- endfor %}
-    {% endif %}
-    {% if page.taxonomies.contexts %}
-    {% for context in page.taxonomies.contexts -%}
+    {%- endfor -%}
+    {%- endif -%}
+    {%- if page.taxonomies.contexts -%}
+    {%- for context in page.taxonomies.contexts -%}
     <a href="/contexts/{{ context | slugify }}">@{{ context }}</a>
-    {%- endfor %}
-    {% endif %}
-    {% endif %}
+    {%- endfor -%}
+    {%- endif -%}
+    {%- endif -%}
 </p>
 {% endblock footer %}
