Add margin between nav and taxonomies

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,27 +1,40 @@
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   filter: invert(1);
+
   img {
     filter: invert(1);
 
-    &.invertable { filter: invert(0); }
+    &.invertable {
+      filter: invert(0);
+    }
   }
 }
 
-body[theme="dark"] { @include dark-appearance; }
+body[theme="dark"] {
+  @include dark-appearance;
+}
 
 
 @media (prefers-color-scheme: dark) {
-  body[theme="auto"] { @include dark-appearance; }
+  body[theme="auto"] {
+    @include dark-appearance;
+  }
 }
+
 // -------------------------------------------- //
 
 // bg color is also needed in html in order to
 // block body's background propagation
 // see: https://stackoverflow.com/a/61265706
-html, body { background: white; }
+html,
+body {
+  background: white;
+}
 
-html { height: 100%; }
+html {
+  height: 100%;
+}
 
 body {
   color: black;
@@ -33,17 +46,33 @@ body {
   overflow-wrap: break-word;
 }
 
-.post-meta { text-align: right; }
+.post-meta {
+  text-align: right;
+}
 
-h2, h3, h4, h5, h6 { margin-top: 3rem; }
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 3rem;
+}
 
-hr { margin: 2rem 0; }
+hr {
+  margin: 2rem 0;
+}
 
-p { margin: 1rem 0; }
+p {
+  margin: 1rem 0;
+}
 
-li { margin: 0.4rem 0; }
+li {
+  margin: 0.4rem 0;
+}
 
-*:target { background: yellow; }
+*:target {
+  background: yellow;
+}
 
 .w {
   max-width: 640px;
@@ -55,13 +84,22 @@ hr {
   text-align: center;
   border: 0;
 
-  &:before { content: '/////' }
-  &:after { content: attr(data-content) '/////' }
+  &:before {
+    content: '/////'
+  }
+
+  &:after {
+    content: attr(data-content) '/////'
+  }
 }
 
-table { width: 100%; }
+table {
+  width: 100%;
+}
 
-table, th, td {
+table,
+th,
+td {
   border: thin solid black;
   border-collapse: collapse;
   padding: 0.4rem;
@@ -84,7 +122,9 @@ blockquote {
   border: thin solid black;
   padding: 1rem;
 
-  p { margin: 0; }
+  p {
+    margin: 0;
+  }
 }
 
 img {
@@ -95,13 +135,22 @@ img {
 
 .footnote-definition {
   padding: 0 1rem;
+
   &:target {
     background: yellow;
     color: #212121;
   }
+
   p {
     display: inline;
   }
 }
 
-nav, .taxonomies { text-align: center; }
+nav,
+.taxonomies {
+  text-align: center;
+
+  a {
+    margin-right: 1rem;
+  }
+}
