--- a/templates/page.html
+++ b/templates/page.html
@@ -3,7 +3,7 @@
 {% block header %}
 <p><a href="..">..</a>/{{ page.slug }}</p>
 <p class="post-meta"><time datetime="{{ page.date }}">{{ page.date }}</time></p>
-<h1>{{ page.title }}</h1>
+<h1 id="_title">{{ page.title }}</h1>
 {% endblock header %}
 
 {% block content %}
@@ -32,6 +32,9 @@ Table of contents
 {% endblock content %}
 
 {% block footer %}
+<p class="to-top">
+    <a href="#_title">^ Top</a>
+</p>
 <p class="taxonomies">
     {%- if page.taxonomies.tags -%}
     {%- for tag in page.taxonomies.tags -%}
